--- a/components/navigation/navigation.css
+++ b/components/navigation/navigation.css
@@ -13,7 +13,7 @@
   align-items: center;
   width: 100%;
   opacity: 0;
-  height: 0;
+  min-height: 0;
   background-color: #F2F2F2;
   padding: 0;
   margin: 0;
@@ -23,6 +23,12 @@
 
 .nav__dropdown li {
   cursor: pointer;
+  text-transform: uppercase;
+}
+
+.nav__dropdown a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .nav__dropdown li:hover {
@@ -33,7 +39,7 @@ nav:hover~.nav__dropdown,
 .nav__dropdown:hover {
   visibility: visible;
   opacity: 1;
-  height: 180px;
+  min-height: 180px;
 }
 
 .item__active {
