--- a/components/navigation/navigation.css
+++ b/components/navigation/navigation.css
@@ -13,6 +13,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  top: 53px;
   opacity: 0;
   min-height: 0;
   background-color: #F2F2F2;
